# the-rust-programming-language

./: Cargo.toml
10-generics/src/: generics.rs  main.rs  traits.rs
11-lifetimes/src/: main.rs
11-tests/: Cargo.toml
11-tests/adder/src/: lib.rs
11-tests/adder/tests/: integration_tests.rs
11-tests/adder/tests/common/: mod.rs
12-cli/src/: lib.rs  main.rs
13-functional-features/benches/: benchmark.rs
13-functional-features/src/: closures.rs  iterators.rs  main.rs
15-smart-pointers/src/: boxes.rs  main.rs  mocks.rs
16-concurrency/src/: channels.rs  main.rs  thread.rs
17-oop/src/: collection.rs  main.rs  traits.rs
17.3-oop-design-pattern/: Cargo.toml
17.3-oop-design-pattern/blog/src/: lib.rs
17.3-rust-style/: Cargo.toml
17.3-rust-style/blog/: Cargo.toml
17.3-rust-style/blog/src/: lib.rs
17.3-rust-style/src/: main.rs
19-advanced/src/: extern_lib.rs  main.rs  unsafe_lib.rs
2-guess-game/: Cargo.toml
2-guess-game/src/: main.rs
20-web-server/: 404.html
20-web-server/src/: lib.rs  main.rs
3.2-data-types/src/: main.rs
3.3-functions/src/: main.rs
3.5-control-flow/src/: main.rs
4-ownership/: Cargo.toml  main.rs  references.rs  slices.rs
5-structs/src/: main.rs  methods  methods.rs
6-enums-pattern-matching/src/: main.rs
7-modules/restaurant/src/: lib.rs
8-collections/src/: hashmaps.rs  main.rs  strings.rs  vectors.rs
9-error-handling/src/: main.rs
